# bets_test_task

./: .gitignore  README.md
bet_market/: .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml  start.sh
bet_market/alembic/: env.py
bet_market/alembic/versions/: 520912c3c4a6_add_default_to_id.py  95e18e1d082e_initial_tables.py
bet_market/src/: config.py
bet_market/src/db/: cache_session.py
bet_market/src/dto/: bet.py
bet_market/src/models/: __init__.py  base.py  bet.py
bet_market/src/repositories/: base.py  bet.py
bet_market/src/routers/: router.py
bet_market/src/schemas/: bet.py  event.py
bet_market/src/services/: __init__.py  bet.py  event.py
bet_market/src/services/cache/: __init__.py  bet_cache.py  cache.py  event_cache.py
bet_market/src/services/consumers/: __init__.py
bet_market/src/services/consumers/events/: __init__.py  update_event.py
bet_market/tests/bets/: test_bet_repository.py
line_provider/: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml
line_provider/alembic/: env.py
line_provider/alembic/versions/: a90ef77a1dcb_create_event_table.py
line_provider/src/: config.py
line_provider/src/db/: session.py
line_provider/src/models/: __init__.py  event.py
line_provider/src/repositories/: event.py
line_provider/src/routers/: router.py
line_provider/src/schemas/: event.py
line_provider/src/services/: event.py
line_provider/src/services/producers/: __init__.py  base.py  session.py
line_provider/src/services/producers/events/: __init__.py  (+1 more)
line_provider/tests/events/: test_evet_repository.py
